--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
         install.packages("mongolite")
       shell: Rscript {0} 
     - name: Scrape Data steam
-      run: Rscript Scrapping data 1.R
+      run: Rscript C:/Users/ASUS/Documents/R Project/Semester 2/MDS/MongoDB/Scrapping.R
